--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <h3>About</h3>
         <footer>The Valyrian languages are a fictional language family in the A Song of Ice and Fire series of<br> fantasy novels by George R. R. Martin, and in their television adaptation Game of Thrones</footer>
     </div>
-    <script src="app.js" text="text/javascript"></script>
+    <script src="index.js" text="text/javascript"></script>
 </body>
 </html>
